# sysrepo-plugins-common

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CompileOptions.cmake  Doxyfile  LICENSE  README.md
CMakeModules/: FindLIBYANG.cmake  FindSYSREPO.cmake
cpp/: CMakeLists.txt
cpp/src/: srpcpp.hpp
cpp/src/srpcpp/: callbacks.hpp  common.cpp  common.hpp  context.cpp  context.hpp  datastore.hpp  ds-check.hpp  module-registry.hpp  module.hpp
src/: srpc.h
src/srpc/: change_tree.c  change_tree.h  common.c  common.h  feature_status.c  feature_status.h  ly_tree.c  ly_tree.h  node.c  node.h  types.h
src/srpc/node/: any.c  any.h  basic.c  basic.h  change.c  change.h
test/: Tests.cmake  test_change_tree.c  test_feature_status.c  test_ly_tree.c  test_node.c
